--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.algaworks.algalog</groupId>
 	<artifactId>algalog-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>algalog-api</name>
 	<description>API do AlgaLog</description>
 	<properties>
